[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipLabel" type="Label" parent="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.25
text = "Haz click en iniciar juego"
align = 1
valign = 2

[node name="JoinButton" type="Button" parent="VBoxContainer"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.5
text = "Unirse al juego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="VBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
text = "Crear juego"

[node name="NameField" type="LineEdit" parent="VBoxContainer"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
max_length = 25
secret = true
placeholder_text = "Nombre"
placeholder_alpha = 0.686
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/NameField" to="." method="_on_NameField_text_changed"]
